monitoring-single/vmalert/manifests/vmalert-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vmalert
    app.kubernetes.io/instance:  victoria-metrics
  name: vmalert
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 8880
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: vmalert
    app.kubernetes.io/instance:  victoria-metrics
  type: "ClusterIP"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmalert
  labels:
    app.kubernetes.io/name: vmalert
    app.kubernetes.io/instance:  victoria-metrics
  namespace: monitoring
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vmalert
      app.kubernetes.io/instance:  victoria-metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vmalert
        app.kubernetes.io/instance:  victoria-metrics
    spec:
      # serviceAccountName: vmalert-victoria-metrics-alert
      containers:
        - name: victoria-metrics-alert-server
          image: "victoriametrics/vmalert:v1.99.0"
          args:
            - -datasource.url=http://vmsingle:8428
            - -notifier.url=http://vmalert-alertmanager:9093
            - -remoteWrite.url=http://vmsingle:8428
            - -envflag.enable=true
            - -envflag.prefix=VM_
            - -loggerFormat=json
            - -rule="/rules/record-rules/*.yaml"
            - -rule="/rules/alert-rules/*.yaml"
            - -rule="/rules/alertmanager-rules/*.yaml"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8880
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: record-rules
              mountPath: /rules/record-rules
            - name: alert-rules
              mountPath: /rules/alert-rules
            - name: alertmanager-rules
              mountPath: /rules/alertmanager-rules
      volumes:    
        - name: record-rules
          configMap:
            name: record-rules-config
        - name: alert-rules
          configMap:
            name: alert-rules-config
        - name: alertmanager-rules
          configMap:
            name: alertmanager-rules
