monitoring-single/vmalert/manifests/alertmanager-manifest.yaml

# Source: victoria-metrics-alert/templates/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: victoria-metrics
  annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9093"
spec:
  ports:
    - name: web
      port: 9093
      targetPort: web
      protocol: TCP
  selector:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: victoria-metrics

---
# Source: victoria-metrics-alert/templates/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: victoria-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/instance: victoria-metrics
  strategy:
    # Must be "Recreate" when we have a persistent volume
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alertmanager
        app.kubernetes.io/instance: victoria-metrics
    spec:
      # serviceAccountName: vmalert-victoria-metrics-alert
      containers:
        - name: victoria-metrics-alert-alertmanager
          image: "prom/alertmanager:v0.25.0"
          args:
            - --config.file=/config/alertmanager.yaml
            - --storage.path=/data
            - --data.retention=120h
            - --web.listen-address=0.0.0.0:9093
            - --cluster.advertise-address=$(POD_IP):6783
          ports:
            - name: web
              containerPort: 9093
          readinessProbe:
            httpGet:
              path: /-/ready
              port: web
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: web
          volumeMounts:
            - name: storage
              mountPath: /data
            - name: config
              mountPath: /config
              readOnly: true
          resources: {}
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: alertmanager-pvc
        - name: config
          configMap:
            name: alertmanager-config
---
# Source: victoria-metrics-alert/templates/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: victoria-metrics
  name: vmalert-alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alert.dev.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alertmanager
              port:
                number: 9093
